Fix spacing between footer and app

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 .footer {
     position: sticky;
-    bottom: 0;
+    bottom: -1px;
     background-color: var(--primary-blue);
     display: flex;
     flex-flow: row wrap;
